--- a/index_style.css
+++ b/index_style.css
@@ -32,6 +32,7 @@
     justify-content: center;
     margin-bottom: 30px;
     text-align: center;
+    flex-grow: 1; /* Add this */
 }
 
 #links_area a {
@@ -53,7 +54,7 @@ text-align: center;
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh; /* Make sure this is here */
 }
 
 .main-content {
