--- a/index_style.css
+++ b/index_style.css
@@ -63,6 +63,7 @@ body {
 
 .footer {
     background-color: #f0f0f0;
-    padding: 6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     text-align: center;
 }
