--- a/index_style.css
+++ b/index_style.css
@@ -4,13 +4,13 @@
     margin: 10px;
 }
 
-.bottom_image {
+#bottom_image {
     width: 250px;
     height: 250px;
     margin: 5px;
 }
 
-.bottom_image_wrapper {
+#bottom_image_wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
