--- a/index_style.css
+++ b/index_style.css
@@ -44,6 +44,15 @@
     padding-bottom: 20px;
 }
 
+.footer {
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+
 
 
 
