--- a/index_style.css
+++ b/index_style.css
@@ -44,14 +44,17 @@
     padding-bottom: 20px;
 }
 
-.footer {
-    padding: 20px;
-    text-align: center;
+#bottom {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-  }
+}
+
+.footer {
+    padding: 20px;
+    text-align: center;
+}
 
 
 
