--- a/index_style.css
+++ b/index_style.css
@@ -20,6 +20,7 @@
 }
 
 #links_area {
+    min-height: 30vw; /* added to ensure enough space for links */
     margin-bottom: 3vw;
     text-align: center;
 }
@@ -43,9 +44,6 @@
 }
 
 #bottom {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
 }
 
@@ -74,6 +72,7 @@
         padding: 2vw;
     }
 }
+
 
 
 
