--- a/dummy_node/public/dummy_style.css
+++ b/dummy_node/public/dummy_style.css
@@ -1,3 +1,17 @@
+body {
+    display: grid;
+    place-items: center;
+    height: 50vh;
+    margin: 0;
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+    gap: 1em;
+}
+h1 {
+    text-align: center;
+    width: 100%;
+}
+
 #imageArea {
     width: 900px;
     height: 700px;
