--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -23,7 +23,7 @@ h1 {
 
 #imageArea img {
     position: absolute;  /* Allows for dragging without affecting other elements' positions */
-    
+
     width: 150px;  /* Initial width */
     height: 150px; /* Initial height */
 
@@ -32,4 +32,6 @@ h1 {
     touch-action: none; /* Prevents default touch behavior */
 
     cursor: grab;
+
+    resize: none;
 }
