--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -24,6 +24,9 @@ h1 {
 #imageArea img {
     position: absolute;  /* Allows for dragging without affecting other elements' positions */
 
+    width: 150px;  /* Initial width */
+    height: 150px; /* Initial height */
+
     touch-action: none; /* Prevents default touch behavior */
 
     cursor: grab;
