--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -38,7 +38,8 @@ h1 {
     border: 1px solid black;
 }
 
-.selected {
+.selected,
+.selected:hover {
     border: 2px solid red;
-    box-shadow: 0px 0px 10px rgba(0, 0, 255, 0.5);
+    box-shadow: 0px 0px 10px black;
 }
