add delete section to html

--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -42,3 +42,10 @@ h1 {
 .selected {
     box-shadow: 0px 0px 10px black;
 }
+
+#uploadSection, #deleteSection {
+    display: flex;
+    align-items: center; 
+    gap: 10px; /* This creates a gap between the child elements */
+}
+
