add delete section to html

--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -44,9 +44,7 @@ h1 {
 }
 
 #uploadSection, #deleteSection {
-    display: flex;
-    align-items: left; 
-    gap: 10px; /* This creates a gap between the child elements */
+    text-align: left;
 }
 
 #deleteButton {
