--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -46,6 +46,8 @@ h1 {
 #uploadSection, #deleteSection {
     text-align: left;
     width: 90%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 #deleteButton {
