add bottom padding

--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -54,3 +54,8 @@ h1 {
     margin-right: 65px; /* space between delete button and are you sure text */
 }
 
+#bottomPadding {
+    height: 50px;
+    width: 100%;
+}
+
