--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -43,7 +43,7 @@ h1 {
     box-shadow: 0px 0px 10px black;
 }
 
-#uploadSection, #deleteSection {
+#uploadSection, #deleteSection, #zIndexControlSection {
     text-align: left;
     width: 70%;
     border: 1px solid black;
