--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -54,6 +54,11 @@ h1 {
     margin-right: 65px; /* space between delete button and are you sure text */
 }
 
+#zIndexText {
+    margin-right: 30px;
+}
+
+
 #bottomPadding {
     height: 80px;
     width: 100%;
