--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -51,7 +51,7 @@ h1 {
     padding: 15px;
 }
 
-#deleteButton {
+#deleteButton, #deleteAllButton {
     margin-right: 65px; /* space between delete button and are you sure text */
 }
 
