--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -65,3 +65,27 @@ h1 {
     width: 100%;
 }
 
+
+/* Media query for mobile screens */
+@media only screen and (max-width: 768px) {
+    button.buttonCheck {
+        padding: 12px 20px;  /* Increase padding for larger buttons */
+        font-size: 18px;     /* Increase font size for readability */
+    }
+
+    #deleteButton, #deleteAllButton {
+        margin-right: 30px; /* Adjust margin to better fit larger buttons */
+    }
+
+    #zIndexText {
+        margin-right: 10px; /* Adjust margin */
+    }
+
+    #uploadSection, #deleteSection, #zIndexControlSection, #deleteAllSection {
+        padding: 20px;   /* Increase padding for better touch targets on mobile */
+        width: 90%;      /* Increase width to take up more space on smaller screens */
+    }
+
+}
+
+
