--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -67,9 +67,10 @@ h1 {
 
 
 /* Media query for mobile screens */
-@media only screen and (max-width: 1068px) {
+@media only screen and (max-width: 768px) {
     body {
         background-color: red;
+        font-size: 24px;
     }
     button.buttonCheck {
         padding: 18px 30px;  /* Increase padding for larger buttons */
