--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -69,7 +69,7 @@ h1 {
 /* Media query for mobile screens */
 @media only screen and (max-width: 768px) {
     body {
-        background-color: red;
+        background-color: blue;
         font-size: 24px;
     }
     button.buttonCheck {
