--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 #uploadSection, #deleteSection, #zIndexControlSection,
-#deleteAllSection {
+#deleteAllSection, #downloadScreenshotSection {
     text-align: left;
     width: 70%;
     border: 1px solid black;
