--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -19,6 +19,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 #imageArea img {
