--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -42,6 +42,9 @@ h1 {
 
 .selected {
     box-shadow: 0px 0px 10px black;
+    padding: 15px; 
+    margin: -15px;
+    background-clip: content-box;
 }
 
 #uploadSection, #deleteSection, #zIndexControlSection,
