--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -46,6 +46,10 @@ h1 {
     border: 15px solid transparent;
 }
 
+.selected:hover {
+    border: 15px solid transparent;
+}
+
 #uploadSection, #deleteSection, #zIndexControlSection,
 #deleteAllSection, #downloadScreenshotSection {
     text-align: left;
