--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -37,17 +37,16 @@ h1 {
 
 
 #imageArea img:hover {
-    border: 1px solid black;
+    outline: 1px solid black;
 }
 
 .selected {
     box-shadow: 0px 0px 10px black;
-    box-sizing: border-box;
-    border: 15px solid transparent;
+    outline: 15px solid transparent;
 }
 
 .selected:hover {
-    border: 15px solid transparent;
+    outline: 15px solid transparent;
 }
 
 #uploadSection, #deleteSection, #zIndexControlSection,
