--- a/collage/public/body_lang_stylesheet.css
+++ b/collage/public/body_lang_stylesheet.css
@@ -6,7 +6,7 @@ body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
     gap: 1em;
-    font: 40px;
+    font-size: 20px;
 }
 h1 {
     text-align: center;
